--- a/index.slim
+++ b/index.slim
@@ -7,22 +7,29 @@ html
     markdown:
       Följ Blockets annonser med RSS.
 
-      Gör en sökning på Blocket och byt sen ut **`www.blocket.se`** i adressen mot **`#{request.host_with_port}`** så har du en RSS-feed.
+      Gör en sökning på Blocket och byt sen ut **`www.blocket.se`** i adressen mot **`#{request.host_with_port}`** så har du ett s.k. RSS-feed.
 
       T.ex. när du är på <code>http://<strong>www.blocket.se</strong>/stockholm?q=fisk</code>, ändra till
       <code>http://<strong>#{request.host_with_port}</strong>/stockholm?q=fisk</code>.
 
-      Ta den adressen och lägg till i din RSS-läsare, t.ex. [Google Reader](http://www.google.com/reader/).
+
+      ## Vad ska jag göra med RSS-feed-adressen?
+
+      Du kan lägga till den i någon tjänst som skickar email, t.ex. [Blogtrottr](http://blogtrottr.com/).
+
+      Eller i en tjänst som ger ett Facebook-liknande flöde, t.ex. [Feedly](http://feedly.com).
 
 
-      ## Bookmarklet
+      ## Smidigare skapande av RSS-adress
 
-        Bokmärk nedanstående länk (gärna i din webbläsares bokmärkesrad) så kan du sedan med ett klick på bokmärket få en RSS-adress från en Blocket-sökning.
+      Bokmärk nedanstående länk (gärna i din webbläsares bokmärkesrad) så kan du sedan med ett klick på bokmärket få en RSS-adress från en Blocket-sökning.
 
       <a href="javascript:location.href=location.href.replace('www.blocket.se', '#{request.host_with_port}');">Blocket RSS</a>
 
-      ## Detaljer
+
+      ## Tekniska detaljer
 
       Koden kan sättas upp på en annan server om Blocket blockerar denna, eller om du vill undvika att denna är överbelastad. [Visa koden.](http://github.com/henrik/blocket_se_feeds)
+
 
       Av [Henrik Nyh](http://henrik.nyh.se).
