--- a/index.slim
+++ b/index.slim
@@ -5,7 +5,10 @@ html
   body
     h1= @title
     markdown:
-      Följ Blockets annonser med RSS.
+
+      En tjänst för att bevaka Blockets annonser med RSS.
+
+      ## Instruktioner
 
       Gör en sökning på Blocket och byt sen ut **`www.blocket.se`** i adressen mot **`#{request.host_with_port}`** så har du ett s.k. RSS-feed.
 
@@ -18,6 +21,10 @@ html
       Du kan lägga till den i någon tjänst som skickar email, t.ex. [Blogtrottr](http://blogtrottr.com/).
 
       Eller i en tjänst som ger ett Facebook-liknande flöde, t.ex. [Feedly](http://feedly.com).
+
+      Du kan lägga till hur många RSS-feeds som helst.
+
+      De flesta bloggar, nyhetssajter med mera har egna RSS-flöden som du kan följa på samma sätt.
 
 
       ## Smidigare skapande av RSS-adress
