Consistently call it 'RSS feed'.
Since I use 'flöde' for the Facebook part. Trying to use different terms to avoid confusion.

--- a/index.slim
+++ b/index.slim
@@ -24,7 +24,7 @@ html
 
       Du kan lägga till hur många RSS-feeds som helst.
 
-      De flesta bloggar, nyhetssajter med mera har egna RSS-flöden som du kan följa på samma sätt.
+      De flesta bloggar, nyhetssajter med mera har egna RSS-feeds som du kan följa på samma sätt.
 
 
       ## Smidigare skapande av RSS-adress
