--- a/index.slim
+++ b/index.slim
@@ -8,4 +8,4 @@ html
 
       Detta var en tjänst för att bevaka Blockets annonser med RSS, men gick sönder och underhålls inte längre.
 
-      [Koden är tillgänglig](http://github.com/henrik/blocket_se_feeds) om någon annan vill uppdatera den och sätta upp en ny tjänst:
+      [Koden är tillgänglig](http://github.com/henrik/blocket_se_feeds) om någon annan vill uppdatera den och sätta upp en ny tjänst.
